==> lightseraph/UWB_TDOA/lib/platform/port.c <==
#include "port.h"
#include "deca_device_api.h"
#include "stm32f1xx_hal_conf.h"
#include "main.h"

ITStatus EXTI_GetITEnStatus(uint32_t x)
{
	return ((NVIC->ISER[(((uint32_t)x) >> 5UL)] &\
		    (uint32_t)(1UL << (((uint32_t)x) & 0x1FUL)) ) == (uint32_t)RESET)?(RESET):(SET);
}

void reset_DW1000(void)
{
	GPIO_InitTypeDef	GPIO_InitStruct;

	// Enable GPIO used for DW1000 reset as open collector output
	GPIO_InitStruct.Pin = DW_RESET_Pin;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(DW_RESET_GPIO_Port, &GPIO_InitStruct);

	//drive the RSTn pin low
	HAL_GPIO_WritePin(DW_RESET_GPIO_Port, DW_RESET_Pin, GPIO_PIN_RESET);

	usleep(1);
	//put the pin back to output open-drain (not active)
	setup_DW1000RSTnIRQ(0);

	Sleep(2);
}

void setup_DW1000RSTnIRQ(int enable)
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};

	if(enable)
	{
		// Enable GPIO used as DECA RESET for interrupt
		GPIO_InitStruct.Pin = DW_RESET_Pin;
		GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		HAL_GPIO_Init(DW_RESET_GPIO_Port, &GPIO_InitStruct);

		HAL_NVIC_EnableIRQ(EXTI0_IRQn);		//pin #0 -> EXTI #0
		HAL_NVIC_SetPriority(EXTI0_IRQn, 3, 0);
		
	}
	else
	{
		HAL_NVIC_DisableIRQ(EXTI0_IRQn);	//pin #0 -> EXTI #0

		//put the pin back to tri-state ... as 
		//output open-drain (not active)
		GPIO_InitStruct.Pin = DW_RESET_Pin;
		GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
		HAL_GPIO_Init(DW_RESET_GPIO_Port, &GPIO_InitStruct);
		HAL_GPIO_WritePin(DW_RESET_GPIO_Port, DW_RESET_Pin, GPIO_PIN_SET);
	}
}

void led_off (led_t led)
{
	switch (led)
	{
	case LED_PC6:
		HAL_GPIO_WritePin(LED_PC6_GPIO_Port, LED_PC6_Pin, GPIO_PIN_RESET);
		break;
	case LED_PC7:
		HAL_GPIO_WritePin(LED_PC7_GPIO_Port, LED_PC7_Pin, GPIO_PIN_RESET);
		break;
	case LED_PC8:
		HAL_GPIO_WritePin(LED_PC8_GPIO_Port, LED_PC8_Pin, GPIO_PIN_RESET);
		break;
	case LED_PC9:
		HAL_GPIO_WritePin(LED_PC9_GPIO_Port, LED_PC9_Pin, GPIO_PIN_RESET);
		break;
	case LED_ALL:
		HAL_GPIO_WritePin(LED_PC6_GPIO_Port, LED_PC6_Pin, GPIO_PIN_RESET);
		HAL_GPIO_WritePin(LED_PC7_GPIO_Port, LED_PC7_Pin, GPIO_PIN_RESET);
		HAL_GPIO_WritePin(LED_PC8_GPIO_Port, LED_PC8_Pin, GPIO_PIN_RESET);
		HAL_GPIO_WritePin(LED_PC9_GPIO_Port, LED_PC9_Pin, GPIO_PIN_RESET);
		break;
	default:
		// do nothing for undefined led number
		break;
	}
}

void led_on (led_t led)
{
	switch (led)
	{
	case LED_PC6:
		HAL_GPIO_WritePin(LED_PC6_GPIO_Port, LED_PC6_Pin, GPIO_PIN_SET);
		break;
	case LED_PC7:

		HAL_GPIO_WritePin(LED_PC7_GPIO_Port, LED_PC7_Pin, GPIO_PIN_SET);
		break;
	case LED_PC8:
		HAL_GPIO_WritePin(LED_PC8_GPIO_Port, LED_PC8_Pin, GPIO_PIN_SET);
		break;
	case LED_PC9:
		HAL_GPIO_WritePin(LED_PC9_GPIO_Port, LED_PC9_Pin, GPIO_PIN_SET);
		break;
	case LED_ALL:
		HAL_GPIO_WritePin(LED_PC6_GPIO_Port, LED_PC6_Pin, GPIO_PIN_SET);
		HAL_GPIO_WritePin(LED_PC7_GPIO_Port, LED_PC7_Pin, GPIO_PIN_SET);
		HAL_GPIO_WritePin(LED_PC8_GPIO_Port, LED_PC8_Pin, GPIO_PIN_SET);
		HAL_GPIO_WritePin(LED_PC9_GPIO_Port, LED_PC9_Pin, GPIO_PIN_SET);
		break;
	default:
		// do nothing for undefined led number
		break;
	}
}

void port_set_dw1000_slowrate(void)
{
	hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
	HAL_SPI_Init(&hspi1);
}

void port_set_dw1000_fastrate(void)
{
	hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
	HAL_SPI_Init(&hspi1);
}

__INLINE uint32_t port_CheckEXT_IRQ(void)
{
	return HAL_GPIO_ReadPin(DECAIRQ_GPIO, DW_IRQn_Pin);
}
